--- a/app/src/main/res/layout/adapter_movie_list.xml
+++ b/app/src/main/res/layout/adapter_movie_list.xml
@@ -10,7 +10,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/group_item"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="160dp"
         android:layout_centerInParent="true"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
@@ -57,8 +57,13 @@
                     android:id="@+id/tv_name_chn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
                     android:textSize="16dp"
+                    android:textColor="@color/text_sub"/>
+                <TextView
+                    android:id="@+id/tv_budget"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="10dp"
                     android:textColor="@color/text_sub"/>
             </LinearLayout>
             <CheckBox
