--- a/app/src/main/res/layout/fragment_edit_movie.xml
+++ b/app/src/main/res/layout/fragment_edit_movie.xml
@@ -108,6 +108,32 @@
             app:layout_constraintTop_toBottomOf="@+id/et_name_chn" />
 
         <TextView
+            android:id="@+id/tv_budget"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="28dp"
+            android:text="Budget"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_name_chn_sub" />
+
+        <EditText
+            android:id="@+id/et_budget"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.506"
+            app:layout_constraintStart_toEndOf="@+id/tv_budget"
+            app:layout_constraintTop_toBottomOf="@+id/et_name_chn_sub" />
+
+        <TextView
             android:id="@+id/tv_title_exchange"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -117,7 +143,7 @@
             android:text="Us to Yuan"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_name_chn_sub" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_budget" />
 
         <EditText
             android:id="@+id/et_exchange"
@@ -127,7 +153,7 @@
             android:layout_marginTop="12dp"
             android:inputType="numberDecimal"
             app:layout_constraintStart_toEndOf="@+id/tv_title_exchange"
-            app:layout_constraintTop_toBottomOf="@+id/et_name_chn_sub" />
+            app:layout_constraintTop_toBottomOf="@+id/et_budget" />
 
         <TextView
             android:id="@+id/tv_ok"
