--- a/app/src/main/res/layout/activity_movie_market.xml
+++ b/app/src/main/res/layout/activity_movie_market.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="total"
+            type="com.king.app.gross.page.bean.MarketTotal"/>
+    </data>
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <com.king.app.jactionbar.JActionbar
             android:id="@+id/actionbar"
@@ -17,13 +26,105 @@
             app:showIconBack="true"
             app:maxShowIcon="4"
             app:iconColor="@color/white"/>
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/cl_total"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:background="@color/white_bg"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/actionbar">
+
+            <TextView
+                android:id="@+id/tv_total"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="Total"
+                android:textSize="18dp"
+                app:layout_constraintVertical_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/tv_market_total_title"/>
+
+            <TextView
+                android:id="@+id/tv_total_gross"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="18dp"
+                android:textColor="@color/actionbar_bg"
+                android:textSize="16dp"
+                android:text="@{total.gross}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_total"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tv_total" />
+
+            <TextView
+                android:id="@+id/tv_opening_gross"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:textColor="@color/text_second"
+                android:text="@{total.opening}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_total"
+                app:layout_constraintEnd_toStartOf="@+id/tv_total_gross"
+                app:layout_constraintTop_toTopOf="@+id/tv_total" />
+
+            <TextView
+                android:id="@+id/tv_market_total_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="4dp"
+                android:text="@{total.marketTitle}"
+                android:textSize="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_total"
+                app:layout_constraintVertical_chainStyle="packed" />
+
+            <TextView
+                android:id="@+id/tv_market_gross"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:textSize="12dp"
+                android:text="@{total.marketGross}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_market_total_title"
+                app:layout_constraintStart_toEndOf="@+id/tv_market_total_title"
+                app:layout_constraintTop_toTopOf="@+id/tv_market_total_title" />
+
+            <TextView
+                android:id="@+id/tv_undisclosed_gross"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:textSize="12dp"
+                android:text="@{total.undisclosedGross}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_market_total_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tv_market_total_title" />
+
+            <TextView
+                android:id="@+id/tv_undisclosed_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:text="Undisclosed"
+                android:textSize="12dp"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_market_total_title"
+                app:layout_constraintEnd_toStartOf="@+id/tv_undisclosed_gross"
+                app:layout_constraintTop_toTopOf="@+id/tv_market_total_title" />
+        </android.support.constraint.ConstraintLayout>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_markets"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/actionbar"
+            app:layout_constraintTop_toBottomOf="@id/cl_total"
             app:layout_constraintBottom_toBottomOf="parent"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
