--- a/app/src/main/res/layout/adapter_market_rank_item.xml
+++ b/app/src/main/res/layout/adapter_market_rank_item.xml
@@ -39,8 +39,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:textColor="@color/white"
-                    android:gravity="center"
-                    android:text="@{item.rank}"/>
+                    android:gravity="center"/>
             </RelativeLayout>
             <TextView
                 android:id="@+id/tv_year"
