--- a/app/src/main/res/layout/adapter_market_item.xml
+++ b/app/src/main/res/layout/adapter_market_item.xml
@@ -10,6 +10,7 @@
             type="com.king.app.gross.model.entity.Market"/>
     </data>
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/cl_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
