--- a/app/src/main/res/menu/movie_gross.xml
+++ b/app/src/main/res/menu/movie_gross.xml
@@ -9,12 +9,16 @@
         android:title="chart"
         android:icon="@drawable/ic_show_chart_white_24dp"
         app:showAsAction="ifRoom"/>
+    <item android:id="@+id/menu_add"
+        android:title="add"
+        android:icon="@drawable/ic_add_white_24dp"
+        app:showAsAction="ifRoom"/>
     <item android:id="@+id/menu_date"
-        android:title="close"
+        android:title="Date Type"
         android:icon="@drawable/ic_date_range_white_24dp"
         app:showAsAction="ifRoom"/>
-    <item android:id="@+id/menu_add"
-        android:title="close"
-        android:icon="@drawable/ic_add_white_24dp"
+    <item android:id="@+id/menu_fetch"
+        android:title="Fetch Mojo Data"
+        android:icon="@drawable/ic_cloud_download_white_24dp"
         app:showAsAction="ifRoom"/>
 </menu>
